--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -117,7 +117,7 @@
             android:value="@string/google_maps_api_key" />
 
         <activity
-            android:name=".ui.activities.DiveSpotsListActivity"
+            android:name=".screens.divespots.list.DiveSpotsListActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.SelfCommentsActivity"
