--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -42,6 +42,7 @@ android {
             resValue "string", "flurry_api_key", "DQ8GM2FPPSTBGK7QX4D8"
             resValue "string", "google_maps_api_key", "AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8"
             resValue "string", "server_api_address", "https://ddsapi.ilave.pro"
+            resValue "string", "facebook_app_id", "1876585075891068"
 //            minifyEnabled false
 //            shrinkResources false
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
@@ -52,6 +53,7 @@ android {
             resValue "string", "flurry_api_key", "D45ZMHZZJWDVD8X6G55B"
             resValue "string", "google_maps_api_key", "AIzaSyA5jpAj7uwrxA4oaYvI_bdV9IDbb7gUrZc"
             resValue "string", "server_api_address", "https://api.ddscanner.com"
+            resValue "string", "facebook_app_id", "1691716511044593"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
