+ change password activity

--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -41,7 +41,7 @@ android {
             resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "DQ8GM2FPPSTBGK7QX4D8"
             resValue "string", "google_maps_api_key", "AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8"
-            resValue "string", "server_api_address", "https://ddsapi.ilave.pro"
+            resValue "string", "server_api_address", "https://ddsapi.ilave.pro/v2_0_debug/"
             resValue "string", "facebook_app_id", "1876585075891068"
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
@@ -54,7 +54,7 @@ android {
             resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "D45ZMHZZJWDVD8X6G55B"
             resValue "string", "google_maps_api_key", "AIzaSyA5jpAj7uwrxA4oaYvI_bdV9IDbb7gUrZc"
-            resValue "string", "server_api_address", "https://api.ddscanner.com"
+            resValue "string", "server_api_address", "https://api.ddscanner.com/v2_0/"
             resValue "string", "facebook_app_id", "1691716511044593"
             resValue "string", "application_id", "com.ddscanner"
             resValue "string", "external_path", "Android/data/com.ddscanner/files/Pictures"
