--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -45,6 +45,7 @@ android {
             resValue "string", "facebook_app_id", "1876585075891068"
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
+            resValue "string", "dds_server_id", "163"
 //            minifyEnabled false
 //            shrinkResources false
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
@@ -58,6 +59,7 @@ android {
             resValue "string", "facebook_app_id", "1691716511044593"
             resValue "string", "application_id", "com.ddscanner"
             resValue "string", "external_path", "Android/data/com.ddscanner/files/Pictures"
+            resValue "string", "dds_server_id", "416"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
