--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     compile 'id.zelory:compressor:1.0.4'
     compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.android.support:multidex:1.0.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
