--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -28,8 +28,8 @@ android {
         minSdkVersion 18
         targetSdkVersion 25
         multiDexEnabled true
-        versionCode 27
-        versionName "3.0.2"
+        versionCode 28
+        versionName "3.0.3"
         testInstrumentationRunner 'com.ddscanner.TestRunner'
     }
     buildTypes {
@@ -44,6 +44,7 @@ android {
             resValue "string", "facebook_app_id", "1876585075891068"
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
+            resValue "string", "base_photo_url", "https://ddsapi.ilave.pro/v2_0/image/%1\$s?size=%2\$s"
             resValue "string", "dds_server_id", "163"
 //            minifyEnabled false
 //            shrinkResources false
@@ -55,6 +56,7 @@ android {
             resValue "string", "flurry_api_key", "D45ZMHZZJWDVD8X6G55B"
             resValue "string", "google_maps_api_key", "AIzaSyA5jpAj7uwrxA4oaYvI_bdV9IDbb7gUrZc"
             resValue "string", "server_api_address", "https://api.ddscanner.com/v2_0/"
+            resValue "string", "base_photo_url", "https://api.ddscanner.com/v2_0/image/%1\$s?size=%2\$s"
             resValue "string", "facebook_app_id", "1691716511044593"
             resValue "string", "application_id", "com.ddscanner"
             resValue "string", "external_path", "Android/data/com.ddscanner/files/Pictures"
