--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -22,14 +22,14 @@ android {
     }
     //TODO compileSdkVersion 25 buildToolsVersion "25"
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.ddscanner"
         minSdkVersion 18
         targetSdkVersion 25
         multiDexEnabled true
-        versionCode 28
-        versionName "3.0.3"
+        versionCode 29
+        versionName "3.0.4"
         testInstrumentationRunner 'com.ddscanner.TestRunner'
     }
     buildTypes {
@@ -66,6 +66,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 repositories {
     mavenCentral()
@@ -73,22 +77,27 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 //TODO def playServicesVersion="9.8.0" def supportVersionVersion="25.0.0"
-def playServicesVersion="10.2.0"
-def supportVersionVersion="25.3.0"
+def playServicesVersion="10.2.6"
+def supportVersionVersion="25.3.1"
 
 dependencies {
+
     // tests
+
     // Required for local unit tests (JUnit 4 framework)
     testCompile 'junit:junit:4.12'
+
     // Required for instrumented tests
     androidTestCompile "com.android.support:support-annotations:$supportVersionVersion"
-    androidTestCompile "com.android.support.test:runner:0.5"
+    androidTestCompile 'com.android.support.test:runner:0.5'
+
     //
     testCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 
     // project
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+
     // support libraries
     compile "com.android.support:appcompat-v7:$supportVersionVersion"
     compile "com.android.support:recyclerview-v7:$supportVersionVersion"
@@ -96,6 +105,7 @@ dependencies {
     compile "com.android.support:support-v13:$supportVersionVersion"
     compile "com.android.support:cardview-v7:$supportVersionVersion"
     compile "com.android.support:percent:$supportVersionVersion"
+
     // google play services
     compile "com.google.android.gms:play-services-plus:$playServicesVersion"
     compile "com.google.android.gms:play-services-auth:$playServicesVersion"
@@ -103,35 +113,38 @@ dependencies {
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
     compile "com.google.android.gms:play-services-places:$playServicesVersion"
     compile "com.google.android.gms:play-services-analytics:$playServicesVersion"
+
     // google libraries
     compile 'com.google.maps.android:android-maps-utils:0.4.3'
     compile "com.google.firebase:firebase-core:$playServicesVersion"
     compile "com.google.firebase:firebase-messaging:$playServicesVersion"
+
     // squareup libraries
     compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
     // other libraries
     compile 'com.facebook.android:facebook-android-sdk:4.22.0'
-    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
     compile 'com.flurry.android:analytics:6.4.0'
-    compile 'com.appsflyer:af-android-sdk:4.6.0@aar'
+    compile 'com.appsflyer:af-android-sdk:4.7.1@aar'
     compile 'id.zelory:compressor:1.0.4'
     compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
-
-    compile('org.simpleframework:simple-xml:2.7.1'){
+    compile('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
