--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -44,7 +44,7 @@ android {
             resValue "string", "facebook_app_id", "1876585075891068"
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
-            resValue "string", "base_photo_url", "https://ddsapi.ilave.pro/v2_0/image/%1\$s?size=%2\$s"
+            resValue "string", "base_photo_url", "http://dev.ddscanner.xyz/v2_0/image/%1\$s?size=%2\$s"
             resValue "string", "dds_server_id", "163"
 //            minifyEnabled false
 //            shrinkResources false
