~ don't collect analytic data in debug version

--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -36,7 +36,7 @@ android {
         debug {
 //            ext.enableCrashlytics = false
             applicationIdSuffix ".debug"
-            buildConfigField "boolean", "COLLECT_ANALYTICS_DATA", "true"
+            buildConfigField "boolean", "COLLECT_ANALYTICS_DATA", "false"
             resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "DQ8GM2FPPSTBGK7QX4D8"
             resValue "string", "google_maps_api_key", "AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8"
