--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -21,15 +21,15 @@ android {
         enabled = true
     }
     //TODO compileSdkVersion 25 buildToolsVersion "25"
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "com.ddscanner"
         minSdkVersion 18
-        targetSdkVersion 25
+        targetSdkVersion 26
         multiDexEnabled true
-        versionCode 30
-        versionName "3.0.5"
+        versionCode 31
+        versionName "3.0.6"
         testInstrumentationRunner 'com.ddscanner.TestRunner'
     }
     buildTypes {
@@ -45,7 +45,7 @@ android {
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
             resValue "string", "base_photo_url", "http://dev.ddscanner.xyz/v2_0/image/%1\$s?size=%2\$s"
-            resValue "string", "dds_server_id", "163"
+            resValue "string", "dds_server_id", "416"
 //            minifyEnabled false
 //            shrinkResources false
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
@@ -149,6 +149,7 @@ dependencies {
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
 }
 
 apply plugin: 'com.google.gms.google-services'
