+ photo in dive centers list

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -238,7 +238,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".screens.profile.edit.EditUserProfileActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".screens.profile.edit.EditDiveCenterProfileActivity"
             android:screenOrientation="portrait" />
