--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -40,11 +40,11 @@ android {
             resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "DQ8GM2FPPSTBGK7QX4D8"
             resValue "string", "google_maps_api_key", "AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8"
-            resValue "string", "server_api_address", "http://dev.ddscanner.xyz/"
+            resValue "string", "server_api_address", "https://dev.ddscanner.xyz/"
             resValue "string", "facebook_app_id", "1876585075891068"
             resValue "string", "application_id", "com.ddscanner.debug"
             resValue "string", "external_path", "Android/data/com.ddscanner.debug/files/Pictures"
-            resValue "string", "base_photo_url", "http://dev.ddscanner.xyz/v2_0/image/%1\$s?size=%2\$s"
+            resValue "string", "base_photo_url", "https://dev.ddscanner.xyz/v2_0/image/%1\$s?size=%2\$s"
             resValue "string", "dds_server_id", "416"
 //            minifyEnabled false
 //            shrinkResources false
