--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
+    compile 'za.co.riggaroo:materialhelptutorial:1.+'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
