--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -73,8 +73,8 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 //TODO def playServicesVersion="9.8.0" def supportVersionVersion="25.0.0"
-def playServicesVersion="10.2.6"
-def supportVersionVersion="25.3.1"
+def playServicesVersion="11.0.2"
+def supportVersionVersion="26.0.0-beta2"
 
 dependencies {
 
@@ -128,13 +128,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.github.rey5137:material:1.2.2'
-    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
     compile 'jp.wasabeef:picasso-transformations:2.1.2'
     compile 'com.flurry.android:analytics:6.4.0'
     compile 'com.appsflyer:af-android-sdk:4.7.1@aar'
     compile 'id.zelory:compressor:1.0.4'
-    compile 'com.klinkerapps:link_builder:1.5.2'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.klinkerapps:link_builder:1.6.1'
+    compile 'com.android.support:multidex:1.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
     compile 'za.co.riggaroo:materialhelptutorial:1.+'
@@ -146,7 +146,7 @@ dependencies {
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
 }
 
 apply plugin: 'com.google.gms.google-services'
