--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -110,6 +110,9 @@ dependencies {
     compile "com.android.support:support-v13:$supportVersionVersion"
     compile "com.android.support:cardview-v7:$supportVersionVersion"
     compile "com.android.support:percent:$supportVersionVersion"
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.3@aar') {
+        transitive=true
+    }
 
     // google play services
     compile "com.google.android.gms:play-services-plus:$playServicesVersion"
