--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -156,6 +156,7 @@ dependencies {
         exclude module: 'xpp3'
     }
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
+    compile 'com.steelkiwi:cropiwa:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
