--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -285,6 +285,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".ui.activities.ExampleActivityCountry"
             android:screenOrientation="portrait"/>
+        <activity android:name=".screens.divecenter.spots.DCSpotsActivity" android:screenOrientation="portrait" />
 
         <receiver android:name=".receivers.DeviceBootReceiver">
             <intent-filter>
