--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -158,6 +158,8 @@ dependencies {
     }
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta1'
     compile 'com.steelkiwi:cropiwa:1.0.3'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
