+ product details activity && products list

--- a/trunk/ddscanner/ccp/build.gradle
+++ b/trunk/ddscanner/ccp/build.gradle
@@ -57,8 +57,8 @@ dependencies {
 	compile 'com.googlecode.libphonenumber:libphonenumber:8.5.2'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+//apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 
 /**
  * While uploading,
