--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -148,6 +148,7 @@ dependencies {
     compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
     compile 'za.co.riggaroo:materialhelptutorial:1.+'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile 'at.blogc:expandabletextview:1.0.5'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true
     }
