--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -86,7 +86,7 @@ def playServicesVersion="11.4.2"
 def supportVersionVersion="26.1.0"
 
 dependencies {
-    compile project(':ccp')
+    implementation project(':ccp')
     // tests
 
     // Required for local unit tests (JUnit 4 framework)
@@ -104,64 +104,64 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     // support libraries
-    compile "com.android.support:appcompat-v7:$supportVersionVersion"
-    compile "com.android.support:recyclerview-v7:$supportVersionVersion"
-    compile "com.android.support:design:$supportVersionVersion"
-    compile "com.android.support:support-v13:$supportVersionVersion"
-    compile "com.android.support:cardview-v7:$supportVersionVersion"
-    compile "com.android.support:percent:$supportVersionVersion"
+    implementation "com.android.support:appcompat-v7:$supportVersionVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersionVersion"
+    implementation "com.android.support:design:$supportVersionVersion"
+    implementation "com.android.support:support-v13:$supportVersionVersion"
+    implementation "com.android.support:cardview-v7:$supportVersionVersion"
+    implementation "com.android.support:percent:$supportVersionVersion"
 
     // google play services
-    compile "com.google.android.gms:play-services-plus:$playServicesVersion"
-    compile "com.google.android.gms:play-services-auth:$playServicesVersion"
-    compile "com.google.android.gms:play-services-maps:$playServicesVersion"
-    compile "com.google.android.gms:play-services-location:$playServicesVersion"
-    compile "com.google.android.gms:play-services-places:$playServicesVersion"
-    compile "com.google.android.gms:play-services-analytics:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-plus:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-auth:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-location:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-places:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-analytics:$playServicesVersion"
 
     // google libraries
-    compile 'com.google.maps.android:android-maps-utils:0.4.3'
-    compile "com.google.firebase:firebase-core:$playServicesVersion"
-    compile "com.google.firebase:firebase-messaging:$playServicesVersion"
+    implementation 'com.google.maps.android:android-maps-utils:0.4.3'
+    implementation "com.google.firebase:firebase-core:$playServicesVersion"
+    implementation "com.google.firebase:firebase-messaging:$playServicesVersion"
 
     // squareup libraries
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // other libraries
-    compile 'com.github.faruktoptas:FancyShowCaseView:0.1.4'
-    compile 'com.facebook.android:facebook-android-sdk:4.22.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'org.parceler:parceler-api:1.0.4'
-    compile 'com.github.rey5137:material:1.2.2'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-    compile 'jp.wasabeef:picasso-transformations:2.1.2'
-    compile 'com.flurry.android:analytics:6.4.0'
-    compile 'com.appsflyer:af-android-sdk:4.7.1@aar'
-    compile 'id.zelory:compressor:1.0.4'
-    compile 'com.klinkerapps:link_builder:1.6.1'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
-    compile 'za.co.riggaroo:materialhelptutorial:1.+'
-    compile 'com.github.chrisbanes:PhotoView:2.1.3'
-    compile 'at.blogc:expandabletextview:1.0.5'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
+    implementation 'com.github.faruktoptas:FancyShowCaseView:0.1.4'
+    implementation 'com.facebook.android:facebook-android-sdk:4.22.0'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'org.parceler:parceler-api:1.0.4'
+    implementation 'com.github.rey5137:material:1.2.2'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
+    implementation 'jp.wasabeef:picasso-transformations:2.1.2'
+    implementation 'com.flurry.android:analytics:6.4.0'
+    implementation 'com.appsflyer:af-android-sdk:4.7.1@aar'
+    implementation 'id.zelory:compressor:1.0.4'
+    implementation 'com.klinkerapps:link_builder:1.6.1'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'cn.gavinliu.android.lib:ShapedImageView:0.8.4'
+    implementation 'za.co.riggaroo:materialhelptutorial:1.+'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'at.blogc:expandabletextview:1.0.5'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true
     }
-    compile('org.simpleframework:simple-xml:2.7.1') {
+    implementation('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
-    compile 'com.steelkiwi:cropiwa:1.0.3'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    implementation 'com.steelkiwi:cropiwa:1.0.3'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-implementationr:8.8.1'
+    implementation 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
